--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,6 @@
       </p>
     </div>
     <h5>--------------------------------------------------------------------------------</h5>
-    <a href="home.html">Home</a> | <a href="experience.html">Experience</a> | <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a> | <a href="experience.html">Experience</a> | <a href="contact.html">Contact</a>
   </body>
 </html>
