--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
       <p class="body">I mostly like to cook Thai food.</p>
     </div>
     <h5>--------------------------------------------------------------------------------</h5>
-    <a href="home.html">Home</a> | <a href="experience.html">Experience</a> | <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a> | <a href="experience.html">Experience</a> | <a href="contact.html">Contact</a>
   </body>
 </html>
