--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <h3 class="head">Contact</h3>
     <div class="block">
       <p class="body">
-        Email&#128231; : <a href="https://outlook.office.com/mail/" target="_blank" rel="noopener noreferrer">krittaphat_su@cmu.ac.th</a> <br />
+        Email&#128231; : <a href="mailto:krittaphat_su@cmu.ac.th">krittaphat_su@cmu.ac.th</a> <br />
         Tel&#128241; : 0931726525
       </p>
     </div>
